--- a/index.css
+++ b/index.css
@@ -1,3 +1,25 @@
+input{
+  border-radius: 1rem;
+  width: 90%;
+  padding:5px;
+  margin:auto;
+}
+#sub{
+  color:white;
+  background-color: #6c63ff;
+  border:none;
+}
+#sub:hover{
+  background-color: #060336;
+  cursor: pointer;
+}
+
+form{
+  max-width:768px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
 .wrapper {
   min-height: 100vh;
   color: #000;
@@ -27,11 +49,6 @@
   font-weight: 700;
 }
 
-.text {
-  font-size: 1rem;
-  margin-bottom: 0.8em;
-}
-
 .container {
   max-width: 100%;
   overflow: hidden;
@@ -43,14 +60,10 @@
   height: auto;
   border-radius: 1em 1em 0 0;
   position: relative;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
 }
 
 .img__container {
-  height: 200px;
+  height: auto;
   overflow: hidden;
   margin-bottom: 1em;
 }
@@ -97,23 +110,4 @@
 
 ::placeholder {
   color: #111127;
-}
-
-.subscribe {
-  color: #fff;
-  font-size: 1.3rem;
-  font-weight: 700;
-  background-color: #f55951;
-  padding: 0.9em 0;
-  display: inline-block;
-  border: none;
-  border-radius: 0.5em;
-  width: 100%;
-  margin-bottom: 1.3em;
-}
-
-.text {
-  font-size: 0.9rem;
-  width: 90%;
-  text-align: center;
 }
