--- a/teamPage/css/cards-style.css
+++ b/teamPage/css/cards-style.css
@@ -47,7 +47,7 @@ SECTIONS
 }
 
 .section-gray {
-    background: #E5E5E5;
+    background: white;
     padding: 60px 0 30px 0;
 }
 
@@ -216,6 +216,7 @@ CARDS
 
 .card-blog .card-image + .category {
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .card-raised {
@@ -271,6 +272,9 @@ CARDS
 .card-profile {
     margin-top: 30px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', 'Helvetica Neue', 'Arial';
 }
 
 
@@ -278,7 +282,8 @@ CARDS
 
 .category {
     position: relative;
-    line-height: 0;
+    line-height: 1rem;
+    font-size: 1rem;
     margin: 15px 0;
 }
 
@@ -348,11 +353,14 @@ CARDS
 .card-caption a {
     color: #333;
     text-decoration: none;
+    margin-bottom: 1rem;
+    
 }
 
 .card-caption {
     font-weight: 700;
-    font-family: "Roboto Slab", "Times New Roman", serif;
+    font-family: 'Roboto', 'Helvetica Neue', 'Arial';
+    font-size: 2rem;
 }
 
 
@@ -470,7 +478,7 @@ BUTTONS
     user-select: none;
     background-image: none;
     border: 1px solid transparent;
-    border-radius: 4px;
+    border-radius: 2rem;
 }
 
 .btn,
@@ -515,7 +523,7 @@ BUTTONS
 /* Button Info */
 
 .btn.btn-info {
-    background-color: #00bcd4;
+    background-color: #6c63ff;
     color: #FFFFFF;
 }
 
@@ -596,7 +604,11 @@ BUTTONS
     background: transparent;
     box-shadow: none;
 }
-
+.btn-primary{
+    border-radius: 2rem;
+    background-color: #6c63ff;
+    font-family: 'Roboto', 'Helvetica Neue', 'Arial';
+}
 
 /*---------------------------------------------------------------------- /
 SOCIAL MEDIA BUTTONS
