minor style changes

--- a/teamPage/css/cards-style.css
+++ b/teamPage/css/cards-style.css
@@ -608,6 +608,7 @@ BUTTONS
     border-radius: 2rem;
     background-color: #6c63ff;
     font-family: 'Roboto', 'Helvetica Neue', 'Arial';
+    font-size: 1rem;
 }
 
 /*---------------------------------------------------------------------- /
