--- a/teamPage/css/modal.css
+++ b/teamPage/css/modal.css
@@ -1,4 +1,7 @@
-        /* The Modal (background) */
+* {
+    box-sizing: border-box;
+  }
+/* The Modal (background) */
         .modal {
           display: none;
           /* Hidden by default */
@@ -6,7 +9,7 @@
           /* Stay in place */
           z-index: 1;
           /* Sit on top */
-          padding-top: 2%;
+          padding-top: 5%;
           /* Location of the box */
           left: 0;
           top: 0;
@@ -31,15 +34,25 @@
           margin: auto;
           padding: 0 auto;
           border: 1px solid #888;
-          width: 100%;
           height: auto;
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           -webkit-animation-name: animatetop;
           -webkit-animation-duration: 0.4s;
           animation-name: animatetop;
           animation-duration: 0.4s;
-          width: 40%; place-items: center; margin:auto;
+          width: 40%; 
+          place-items: center; 
       }
+
+      @media only screen and (max-width: 768px) {
+        .modal-content {
+            padding-top:10%;
+            left:0;
+            width:90%;
+        }
+      }
+      
+
       .modal .card-image{
           width: 60%;
           margin-left: 20%;
