--- a/domain_pages/css/modal.css
+++ b/domain_pages/css/modal.css
@@ -1,6 +1,10 @@
 * {
     box-sizing: border-box;
   }
+.table
+{
+    font-size: 1.5rem;
+}
 /* The Modal (background) */
         .modal {
           display: none;
@@ -29,7 +33,8 @@
       /* Modal Content */
       .modal-content {
           position: relative;
-          left: 30%;
+          left: 20%;
+          right: 20%;
           background-color: #fefefe;
           margin: auto;
           padding: 0 auto;
@@ -40,7 +45,7 @@
           -webkit-animation-duration: 0.4s;
           animation-name: animatetop;
           animation-duration: 0.4s;
-          width: 40%; 
+          width: 60%; 
           place-items: center; 
       }
 
@@ -55,7 +60,7 @@
 
       .modal .card-image{
           width: 60%;
-          margin-left: 20%;
+          margin-left: 10%;
       }
 
       /* Add Animation */
