add images in env, inno, soc

--- a/domain_pages/css/modal.css
+++ b/domain_pages/css/modal.css
@@ -30,6 +30,10 @@ img
 
 }
 
+#whatTextDomains{
+    text-align: left;
+}
+
   .carousel-item img {
       position: absolute;
       object-fit: cover;
